fix: text align on "shi" pages #21

--- a/src/css/shkolo/QoL.css
+++ b/src/css/shkolo/QoL.css
@@ -46,6 +46,10 @@
     margin-top: 1rem;
 }
 
+.form-horizontal .control-label {
+    text-align: left !important;
+}
+
 @media (min-width: 768px) {
     /* Participants and Date */
     .col-sm-2 {
